  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano

---------------------------
  Jackdmp changes log
---------------------------

2008-05-13 Stephane Letz  <letz@grame.fr>

	* Fix exception handling in JackShmMem::operator new.
	* Fix JackMutex constructor.

2008-05-12 Stephane Letz  <letz@grame.fr>

	* Allows wrapper library to log in a file (using JACK_WRAPPER_DEBUG=file).

2008-05-09 Stephane Letz  <letz@grame.fr>

	* Mike Taht's fix for proper alsa xrun duration measurement.

2008-05-06 Stephane Letz  <letz@grame.fr>

	* Fix JackPosixThread::StartImp and JackWinThread::StartImp.

2008-05-05 Stephane Letz  <letz@grame.fr>

	* Fix JackClient::Close : notification channel is stopped first to avoid receiving notifications while closing and Close is again a synchronous call.
	* No more remaining client close in JackEngine::Close().

2008-05-01 Stephane Letz  <letz@grame.fr>

	* Fix JackMachClientChannel::InternalClientLoad.
	* Correct internal client loading.
	* For threaded drivers, AcquireRealTime is called after Init step.

2008-04-30 Stephane Letz  <letz@grame.fr>
		
	* Fix JackRestartThreadedDriver::Execute.
	* Better handling of init and run state in JackThread.

2008-04-28 Stephane Letz  <letz@grame.fr>
		
	* Add exceptions management to distinguish drivers recoverable errors from non recoverable ones. Will be used in special threaded drivers (for network).

2008-04-25 Stephane Letz  <letz@grame.fr>
		
	* Correct JackServerGlobals::Init: now check is server is already started.

2008-04-24 Stephane Letz  <letz@grame.fr>
		
	* Correct internal client load.

2008-04-10 Stephane Letz  <letz@grame.fr>
		
	* Remove Linux Makefile, update Readme.

2008-04-03 Stephane Letz  <letz@grame.fr>
		