@@ -22,6 +22,10 @@ Fernando Lopez-Lezcano
 
 2008-05-13 Stephane Letz  <letz@grame.fr>
 
+	* Fix JackEngine::Close to only delete "loadable" clients.
+
+2008-05-13 Stephane Letz  <letz@grame.fr>
+
 	* Fix exception handling in JackShmMem::operator new.
 	* Fix JackMutex constructor.
 
